--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,58 @@
-# Compiled class file
+# OS
+.DS_Store
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# compiled 
+*.com
 *.class
+*.dll
+*.exe
+*.o
+*.so
+*.pyc
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# package
+*.apk
+*.iso
+*.ipa
 *.jar
 *.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# xcode
+*.swp
+*~.nib
+build/
+*.pbxuser
+*.perspective
+*.perspectivev3
+xcuserdata
+
+# eclipse
+.classpath
+.project
+.settings
+
+#android
+bin
+gen
+*.apk
+*.ap_
+*.dex
+
+# logs
+*.log
+
+# RoR
+.bundle
+db/*.sqlite3
+log/*.log
+tmp/
+
+# .Net & Visual Studio
+_ReSharper.*
+*.resharper
+*.resharper.user
+*.csproj.user
+/target/
