--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     	<artifactId>commons-exec</artifactId>
     	<version>1.3</version>
 	</dependency>
+	<dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>1.3.2</version>
+    </dependency>
   </dependencies>
   
   <build>
